--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,24 @@
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
+apply plugin:'application'
 
+
+mainClassName = "com.whiteboardtalks.Main"
+
+ 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
+
+run {
+ 	if (project.hasProperty('args')) {
+        args project.args.split(',')
+    }
+ }
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
